Update fourtune and @fourtune/realm-js.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "devDependencies": {
     "@anio-fs/api": "^6.0.2",
     "@fourtune/core": "^0.100.0",
-    "@fourtune/realm-js": "^0.1.0",
-    "fourtune": "^0.0.1"
+    "@fourtune/realm-js": "^0.800.0-alpha.2",
+    "fourtune": "^0.600.0"
   },
   "scripts": {
     "prepare": "./node_modules/.bin/fourtune ."
