--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@anio-fs/int--tmp-file",
+  "type": "module",
   "version": "2.0.0",
   "description": "Create a temporary file.",
   "main": "./dist/package.min.mjs",
